# 2026mmccmm

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  pytest.ini  run_all.py
.claude/: settings.local.json
.kiro/settings/: mcp.json
.windsurf/rules/: mcp-work-rule.md  spec.md
.windsurf/workflows/: mcm.md  spec.md
archive-contest/mcm2020c/: 2020_MCM_Problem_C.md
archive-contest/mcm2021c/: 2021_MCM_Problem_C.md
archive-contest/mcm2022c/: mcm2022c.md
archive-contest/mcm2023c/: 2023_MCM_Problem_C.md  Problem_C_Data_Wordle.csv
archive-contest/mcm2024c/: 2024_MCM_Problem_C.md
archive-contest/mcm2025c/: 2025_MCM_Problem_C.md
data/processed/: dwts_weekly_panel.csv
data/raw/: dwts_wikipedia_pageviews.csv  dwts_wikipedia_pageviews.meta.json  us_census_2020_state_population.meta.json
docs/: conventions.md  project_structure.md
docs/project_document/: Q1.md  Q2.md  Q3.md  Q4.md  plan.md  showcase.md  writing_reference_memo.md
docs/report/: audit_q4_final_validation_202601301230.md  audit_q4_improved_202601301200.md  audit_showcase_comprehensive_202601301330.md  audit_showcase_final_enhanced_202601312300.md  audit_showcase_pytorch_enhanced_202601312200.md
docs/spec/: architecture.md  target.md  task.md
examples/: README.txt
examples/MCM-Latex-template/: Contest_AI_Policy.md  MCM-main.tex  README.md  README.txt  clean_latex.bat  常用LaTex代码指令.txt
mcm2026c/: 2026_MCM_Problem_C-zhcn.md  README.txt
paper/: draft.md  easymcm.sty  main.tex
scripts/: README.txt  fetch_dwts_wikipedia_pageviews.py  fetch_us_state_population_2020.py
tests/: README.txt  test_dependencies.py  test_optional_dependencies.py  test_project_structure.py  test_system_info.py  test_torch_cuda.py
(+195 files in other folders)
