[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "2026mcm"
version = "0.1.0"
description = "COMAP MCM/ICM 2026 (Problem C)"
authors = [
    { name = "twj0", email = "tangwj2023@dgut.edu.cn" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "plotly>=5.14",
  "openpyxl>=3.1",
  "pyarrow>=14",
  "pyyaml>=6.0",
  "tqdm>=4.65",
]

[dependency-groups]
dev = [
  "ipython>=8.12",
  "pre-commit>=3.6",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
notebook = [
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
]
opt = [
  "cvxpy>=1.4",
  "pulp>=2.7",
]
ml = [
  "xgboost>=2.0",
]
web = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "pytrends>=2.5",
]
dl = [
  "torch",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcm2026"]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["mcm2026"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
